# IOTA-SC-TIP200

./: README.md  go.mod
smartcontract/rust/: Cargo.toml
smartcontract/rust/iota_sc_utils/src/: params.rs  results.rs
smartcontract/rust/src/: constants.rs  lib.rs
tests/iota_sc_utils/: functions_access_test.go
tests/smartcontract/: my_iota_smart_contract_test.go
tests/testutils/codesamples/: smart_contract_interactions_test.go
tests/testutils/testconstants/: test_constants.go
