  
[package]
edition = "2018"
name = "erc_721"
description = "This is an implementation of the ERC-721 standard for ISCP (IOTA Smart Contract Protocol)"
license = "MIT"
version = "0.0.1"
authors = ["Th3B0Y"]
repository = "https://github.com/brunoamancio/IOTA-SC-ERC721"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
iota_sc_utils = { path = "iota_sc_utils" }
wasmlib = { path = "wasp/contracts/rust/wasmlib" }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"