  
[package]
edition = "2018"
name = "tip_200"
description = "This is an implementation of the ERC-721 standard for ISCP (IOTA Smart Contract Protocol)"
license = "MIT"
version = "0.0.1"
authors = ["Th3B0Y"]
repository = "https://github.com/brunoamancio/IOTA-SC-TIP200"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

iota_sc_utils = { git = "https://github.com/brunoamancio/IOTA-SC-Utils", tag = "v0.8.6"}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"